fixed synchronization on light/dark mode transition

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -2,7 +2,7 @@
 
 @include themify($themes) {
     background: themed("primary");
-    transition: all 0.5s ease-in-out;
+    transition: all 0.2s;
 
     .about-container {
         width: 55%;
@@ -15,13 +15,13 @@
 
             h2 {
                 color: themed("accent");
-                transition: all 0.5s ease-in-out;
+                transition: all 0.2s;
             }
 
             h3 {
                 color: themed("primary");
                 background-color: themed("h3-bg-colour");
-                transition: all 0.5s ease-in-out;
+                transition: all 0.2s;
             }
         }
         
@@ -42,7 +42,7 @@
                 box-shadow: 0px 0px 20px rgba(themed("shadow"), 0.15);
                 border-radius: 50%;
 
-                transition: all 0.5s ease-in-out;
+                transition: all 0.2s;
             }
 
             .body-text {
@@ -51,7 +51,7 @@
 
                 p {
                     color: themed("text");
-                    transition: all 0.5s ease-in-out;
+                    transition: all 0.2s;
                 }
 
                 span {
