--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -12,7 +12,7 @@
         align-items: center;
         background-color: themed("secondary");
 
-        transition: all 0.5s ease-in-out;
+        transition: all 0.2s;
 
         .content-container {
             display: flex;
@@ -31,14 +31,14 @@
 
                 h2 {
                     color: themed("accent");
-                    transition: all 0.5s ease-in-out;
+                    transition: all 0.2s;
                 }
 
                 h3 {
                     color: themed("primary");
                     background-color: themed("h3-bg-colour");
 
-                    transition: all 0.5s ease-in-out;
+                    transition: all 0.2s;
                 }
             }
 
@@ -65,11 +65,11 @@
                             width: 2em;
                             height: auto;
                             stroke: themed("text");
-                            transition: all 0.5s ease-in-out;
+                            transition: all 0.2s;
                             
                             #education {
                                     fill: themed("text");
-                                    transition: all 0.5s ease-in-out;
+                                    transition: all 0.2s;
                             }
                         }
                     }
@@ -77,7 +77,7 @@
                     a {
                         color: themed("text");
                         text-decoration: none;
-                        transition: all 0.5s ease-in-out;
+                        transition: all 0.2s;
 
                         &:hover {
                             color: themed("accent");
@@ -98,7 +98,7 @@
                 background-color: themed("primary");
                 border-radius: 50%;
                 box-shadow: 0px 0px 25px rgba(themed("shadow"), 0.15);
-                transition: all 0.5s ease-in-out;
+                transition: all 0.2s;
             }
         }
     }
