--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -12,7 +12,7 @@
 
         background-color: themed("secondary");
 
-        transition: all 0.5s ease-in-out;
+        transition: all 0.2s;
 
         .links-container {
             width: 30%;
@@ -30,7 +30,7 @@
             a {
                 padding: 0.25em;
                 color: themed("accent");
-                transition: all 0.5s ease-in-out;
+                transition: all 0.2s;
 
                 &:hover {
                     transform: scale(105%);
@@ -42,7 +42,7 @@
                 justify-content: center;
                 align-items: center;
                 padding: 0.25em;
-                transition: all 0.5s ease-in-out;
+                transition: all 0.2s;
 
                 svg {
                     width: 32px;
