--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -7,7 +7,7 @@
         padding-top: 8em;
         padding-bottom: 80px;
         
-        transition: all 0.5s ease-in-out;
+        transition: all 0.2s;
 
         .hero-container {
             width: 100%;
@@ -25,7 +25,7 @@
                 h1, p {
                     color: themed("text");
 
-                    transition: all 0.5s ease-in-out;
+                    transition: all 0.2s;
                 }
 
                 h1 {
@@ -42,7 +42,7 @@
                     font-weight: 500;
                     text-align: center;
 
-                    transition: all 0.5s ease-in-out;
+                    transition: all 0.2s;
                 }
             }
 
@@ -55,7 +55,7 @@
                 background-color: themed("primary");
                 box-shadow: 0px 0px 20px rgba(themed("shadow"), 0.15);
 
-                transition: all 0.5s ease-in-out;
+                transition: all 0.2s;
             }
             
         }
@@ -74,12 +74,12 @@
             font-weight: 600;
             border-radius: 40px;
 
-            transition: all 0.5s ease-in-out;
+            transition: all 0.2s;
 
             p {
                 color: themed("text");
 
-                transition: all 0.5s ease-in-out;
+                transition: all 0.2s;
             }
 
             .icons {
@@ -98,7 +98,7 @@
                         border-radius: 50%;
                         fill: themed("primary");
 
-                        transition: all 0.5s ease-in-out;
+                        transition: all 0.2s;
                     }
                 }
             }
@@ -108,7 +108,7 @@
     @media only screen and (max-width: 600px) {
         .blur {
             filter: blur(15px);
-            transition: all 0.5s ease-in-out;
+            transition: all 0.2s;
 
             .home-container {
                 padding-top: 6em;
