--- a/src/styles/scroll.scss
+++ b/src/styles/scroll.scss
@@ -17,7 +17,7 @@
         backdrop-filter: blur(10px);
         box-shadow: 0px 0px 25px rgba(themed("shadow"), 0.5);
         
-        transition: all 0.5s ease-in-out;
+        transition: all 0.2s;
 
         &.visible {
             display: block;
